Add AppLink, Navbar, refactoring classNames

--- a/src/app/styles/themes/light.scss
+++ b/src/app/styles/themes/light.scss
@@ -1,6 +1,10 @@
 :root {
     --bg-color: #d1d1d2;
+    --inverted-bg-color: #593dd6;
 
     --primary-color: #451395;
-    --secondary-color: #343db885;
+    --secondary-color: #6d74e285;
+
+    --inverted-primary-color: #507006;
+    --inverted-secondary-color: #06b262;
 }
