--- a/src/widgets/Sidebar/ui/Sidebar/Sidebar.module.scss
+++ b/src/widgets/Sidebar/ui/Sidebar/Sidebar.module.scss
@@ -13,7 +13,12 @@
 .switchers {
     display: flex;
     justify-content: center;
+    flex-wrap: wrap;
     position: absolute;
     bottom: 20px;
     width: 100%;
+}
+
+.lang {
+    margin-left: 20px;
 }
