--- a/src/app/styles/index.scss
+++ b/src/app/styles/index.scss
@@ -1,23 +1,21 @@
-@import 'reset';
-@import './themes/dark.scss';
-@import './themes/light.scss';
-@import './variables/global.scss';
+@import "reset";
+@import "./themes/dark";
+@import "./themes/light";
+@import "./variables/global";
 
 .app {
-    font: var(--font-m);
-    
-    background: var(--bg-color);
-    color: var(--primary-color);
-
-    min-height: 100vh;
+  font: var(--font-m);
+  background: var(--bg-color);
+  color: var(--primary-color);
+  min-height: 100vh;
 }
 
 .content-page {
-    display: flex;
+  display: flex;
 }
 
 .page-wrapper {
-    flex-grow: 1;
-    padding: 20px;
-    width: 100%;
+  flex-grow: 1;
+  padding: 20px;
+  width: 100%;
 }
