--- a/src/app/styles/index.scss
+++ b/src/app/styles/index.scss
@@ -2,6 +2,7 @@
 @import 'variables/global';
 @import 'themes/normal';
 @import 'themes/dark';
+@import 'themes/deep_purple';
 
 body {
   font: var(--font-m);
