add Skeleton, ArticleDetails: Code,Text, Image

--- a/src/app/styles/themes/deep_purple.scss
+++ b/src/app/styles/themes/deep_purple.scss
@@ -5,4 +5,9 @@
   --secondary-color: #5f227d;
   --inverted-primary-color: #765f6e;
   --inverted-secondary-color: #a8a8a8;
+
+  --skeleton-color: #6f0726;
+  --skeleton-shadow: #aa103e;
+
+  --code-bg: #fff;
 }
