--- a/src/app/styles/themes/normal.scss
+++ b/src/app/styles/themes/normal.scss
@@ -1,8 +1,14 @@
 :root {
-    --bg-color: #e8e8ea;
-    --inverted-bg-color: #090949;
-    --primary-color: #0232c2;
-    --secondary-color: #0449e0;
-    --inverted-primary-color: #049604;
-    --inverted-secondary-color: #04ff04;
+  --bg-color: #e8e8ea;
+  --inverted-bg-color: #090949;
+  --primary-color: #0232c2;
+  --secondary-color: #0449e0;
+  --inverted-primary-color: #049604;
+  --inverted-secondary-color: #04ff04;
+
+  --skeleton-color: #86868e;
+  --skeleton-shadow: #94949c;
+
+  --code-bg: #fff;
 }
+
