--- a/src/app/styles/index.scss
+++ b/src/app/styles/index.scss
@@ -1,42 +1,41 @@
-@import 'reset';
-@import 'variables/global';
-@import 'themes/normal';
-@import 'themes/dark';
-@import 'themes/deep_purple';
+@import "reset";
+@import "variables/global";
+@import "themes/normal";
+@import "themes/dark";
+@import "themes/deep_purple";
 
 body {
-  font: var(--font-m);
-  color: var(--primary-color);
+    font: var(--font-m);
+    color: var(--primary-color);
 }
 
 .app,
 .app_modal,
 .app_drawer {
-  font: var(--font-m);
-  color: var(--primary-color);
+    font: var(--font-m);
+    color: var(--primary-color);
 }
 
 .app {
-  background: var(--bg-color);
-  min-height: 100vh;
+    background: var(--bg-color);
+    min-height: 100vh;
 }
 
 .content-page {
-  display: flex;
+    display: flex;
 }
 
 *::-webkit-scrollbar {
-  width: 8px;
-  height: 10px;
+    width: 8px;
+    height: 10px;
 }
 
 *::-webkit-scrollbar-track {
-  background: var(--card-bg);
+    background: var(--card-bg);
 }
 
 *::-webkit-scrollbar-thumb {
-  background-color: var(--inverted-primary-color);
-  border-radius: 20px;
-  border: 2px solid var(--primary-color);
+    background-color: var(--inverted-primary-color);
+    border-radius: 20px;
+    border: 2px solid var(--primary-color);
 }
-
