--- a/src/app/styles/themes/dark.scss
+++ b/src/app/styles/themes/dark.scss
@@ -11,4 +11,14 @@
     --card-bg: #0e0e76;
     --listbox-bg: #0e0e76;
     --dropdown-bg: #0e0e76;
+
+    --dark-bg-redesigned: #090F11;
+    --bg-redesigned: #0C1214;
+    --light-bg-redesigned: #151C1F;
+    --text-redesigned: #DBDBDB;
+    --hint-redesigned: #555555;
+    --cancel-redesigned: #D95757;
+    --save-redesigned: #6CD98B;
+    --icon-redesigned: #74A2B2;
+    --accent-redesigned: #5ED3F3;
 }
