--- a/src/app/styles/themes/normal.scss
+++ b/src/app/styles/themes/normal.scss
@@ -11,4 +11,14 @@
     --card-bg: #d1d1d5;
     --listbox-bg: #d1d1d5;
     --dropdown-bg: #d1d1d5;
+
+    --dark-bg-redesigned: #FFFFFF;
+    --bg-redesigned: #EFF5F6;
+    --light-bg-redesigned: #E2EEF1;
+    --text-redesigned: #141C1F;
+    --hint-redesigned: #ADBCC0;
+    --cancel-redesigned: #FF7777;
+    --save-redesigned: #62DE85;
+    --icon-redesigned: #5ED3F3;
+    --accent-redesigned: #00C8FF;
 }
