--- a/src/widgets/Sidebar/ui/Sidebar/Sidebar.module.scss
+++ b/src/widgets/Sidebar/ui/Sidebar/Sidebar.module.scss
@@ -41,3 +41,17 @@
         margin-left: 0;
     }
 }
+
+.SidebarRedesigned {
+    background: var(--light-bg-redesigned);
+    width: 220px;
+    border-radius: 32px;
+    height: 100%;
+}
+
+.appLogo {
+  justify-self: center;
+  padding-top: 20px;
+  width: 70px;
+  height: 70px;
+} 
