--- a/src/shared/ui/redesigned/Button/Button.module.scss
+++ b/src/shared/ui/redesigned/Button/Button.module.scss
@@ -15,10 +15,9 @@
     outline: none;
 }
 
-
 .outline {
-    border: 1px solid var(--primary-color);
-    color: var(--primary-color);
+    border: 1px solid var(--accent-redesigned);
+    color: var(--accent-redesigned);
     background: none;
 }
 
