add addon for input and button, style for input

--- a/src/shared/ui/redesigned/Button/Button.module.scss
+++ b/src/shared/ui/redesigned/Button/Button.module.scss
@@ -1,10 +1,16 @@
 .Button {
     cursor: pointer;
     color: var(--text-redesigned);
-    padding: 6px 15px;
+    padding: 8px 16px;
+    display: flex;
+    align-items: center;
 
     &:hover {
         color: var(--accent-redesigned);
+
+        .addonLeft svg, .addonRight svg {
+            color: var(--accent-redesigned);
+        }
     }
 }
 
@@ -15,10 +21,29 @@
     outline: none;
 }
 
+.withAddons {
+    padding: 0 16px;
+}
+
+.addonLeft, .addonRight {
+    display: flex;
+}
+
+.addonLeft svg, .addonRight svg {
+    color: var(--hint-redesigned);
+}
+
 .outline {
     border: 1px solid var(--accent-redesigned);
     color: var(--accent-redesigned);
     background: none;
+}
+
+.fill {
+    background-color: var(--light-bg-redesigned);
+    border: none;
+    outline: none;
+    border-radius: 34px;
 }
 
 .square {
