--- a/src/features/ArticleSortSelector/ui/ArticleSortSelector/ArticleSortSelector.module.scss
+++ b/src/features/ArticleSortSelector/ui/ArticleSortSelector/ArticleSortSelector.module.scss
@@ -1,3 +1,9 @@
 .ArticleSortSelector {
+    display: flex;
+    align-items: center;
     align-self: center;
+}
+
+.ArticleSortSelectorRedesigned {
+
 }
