--- a/src/shared/ui/redesigned/Card/Card.module.scss
+++ b/src/shared/ui/redesigned/Card/Card.module.scss
@@ -1,5 +1,5 @@
 .card {
-    border-radius: 12px;
+    padding: 24px;
 }
 
 .normal {
@@ -27,10 +27,17 @@
 }
 
 .gap_16 {
-    padding: 16px;    
+    padding: 16px;
 }
 
 .gap_24 {
-    padding: 24px;    
+    padding: 24px
 }
 
+.round {
+    border-radius: 40px;
+}
+
+.normal {
+    border-radius: 12px;
+}
