--- a/src/shared/ui/redesigned/Popups/styles/popup.module.scss
+++ b/src/shared/ui/redesigned/Popups/styles/popup.module.scss
@@ -1,56 +1,46 @@
 .popup {
-    position: relative;
+  position: relative;
 }
 
 .menu {
-    border-radius: 18px;
-    border: 1px solid var(--accent-redesigned);
-    overflow: hidden;
+  border-radius: 18px;
+  border: 1px solid var(--accent-redesigned);
+  overflow: hidden;
 }
 
 .trigger {
-    background: none;
-    border: none;
-    outline-color: transparent;
-    padding: 0;
-    margin: 0;
-    cursor: pointer;
-}
-
-// .item {
-//     padding: 15 20px;
-//     width: 100%;
-//     border: none;
-//     background: none;
-//     outline-color: transparent;
-//     color: var(--accent-redesigned);
-//     cursor: pointer;
-// }
-
-.optionTopLeft {
-    bottom: 100%;
-    left: 0;
-}
-
-.optionTopRight {
-    bottom: 100%;
-    right: 0;
-}
-
-.optionBottomRight {
-    top: 100%;
-    left: 0;
-}
-
-.optionBottomLeft {
-    top: 100%;
-    right: 0;
-}
-
-.disabled {
-    opacity: 0.7;
+  background: none;
+  outline: none;
+  margin: 0;
+  padding: 0;
+  border: none;
+  cursor: pointer;
 }
 
 .active {
-    background-color: var(--light-bg-redesigned);
+  background: var(--light-bg-redesigned);
+}
+
+.optionBottomLeft {
+  top: 100%;
+  right: 0;
+}
+
+.optionBottomRight {
+  top: 100%;
+  left: 0;
+}
+
+.optionTopRight {
+  bottom: 100%;
+  left: 0;
+}
+
+.optionTopLeft {
+  right: 0;
+  bottom: 100%;
+}
+
+.disabled {
+  opacity: 0.7;
 }
