--- a/src/shared/ui/redesigned/Popups/ui/Dropdown/Dropdown.module.scss
+++ b/src/shared/ui/redesigned/Popups/ui/Dropdown/Dropdown.module.scss
@@ -1,43 +1,17 @@
-.Dropdown {
-    position: relative;
-    width: max-content;
-}
-
 .menu {
-    display: flex;
-    flex-direction: column;
-    position: absolute;
     background: var(--dark-bg-redesigned);
-    z-index: 100;
-    overflow: hidden;
+    position: absolute;
+    z-index: 10000;
+    flex-direction: column;
+    display: flex;
 }
 
 .item {
-    padding: 15 20px;
+    padding: 10px 25px;
     width: 100%;
     border: none;
     background: none;
-    outline-color: transparent;
+    outline: none;
     color: var(--text-redesigned);
     cursor: pointer;
-}
-
-.optionTopLeft {
-    bottom: 100%;
-    left: 0;
-}
-
-.optionTopRight {
-    bottom: 100%;
-    right: 0;
-}
-
-.optionBottomRight {
-    top: 100%;
-    left: 0;
-}
-
-.optionBottomLeft {
-    top: 100%;
-    right: 0;
 }
