--- a/src/shared/ui/redesigned/Input/Input.module.scss
+++ b/src/shared/ui/redesigned/Input/Input.module.scss
@@ -4,7 +4,7 @@
     border-radius: 48px;
     padding: 8px 16px;
     border: 2px solid var(--icon-redesigned);
-    height: 38px;
+    height: 32px;
     width: 100%;
 }
 
@@ -42,4 +42,16 @@
 
 .readonly {
     opacity: 0.7;
+}
+
+.s {
+    height: 32px;
+}
+
+.m {
+    height: 38px;
+}
+
+.l {
+    height: 44px;
 }
