add settings page, feature for change variant of design

--- a/src/entities/Article/ui/ArticleListItem/ArticleListItem.module.scss
+++ b/src/entities/Article/ui/ArticleListItem/ArticleListItem.module.scss
@@ -1,3 +1,14 @@
+.ArticleListItemRedesigned {
+    &.LIST {
+        width: 100%;
+    }
+
+    &.GRID {
+      width: 240px;  
+      height: 250px;  
+    }
+}
+
 .LIST {
     .views {
         margin-left: auto;
