--- a/src/shared/ui/redesigned/Button/Button.module.scss
+++ b/src/shared/ui/redesigned/Button/Button.module.scss
@@ -34,9 +34,13 @@
 }
 
 .outline {
-    border: 1px solid var(--accent-redesigned);
-    color: var(--accent-redesigned);
+    border: 1px solid var(--icon-redesigned);
     background: none;
+    border-radius: 34px;
+
+    &:hover {
+        border-color: var(--accent-redesigned);
+    }
 }
 
 .fill {
