--- a/src/shared/ui/redesigned/Modal/Modal.module.scss
+++ b/src/shared/ui/redesigned/Modal/Modal.module.scss
@@ -9,7 +9,6 @@
     right: 0;
     opacity: 0;
     pointer-events: none;
-    color: var(--primary-color);
     z-index: var(--modal-z-index);
 }
 
@@ -21,11 +20,22 @@
 .content {
     padding: 20px;
     border-radius: 12px;
-    background-color: var(--bg-color);
     transition: 0.3s transform;
     transform: scale(0.5);
     max-width: 60%;
     z-index: var(--modal-z-index);
+}
+
+.modalNew {
+    .content {
+        background: var(--light-bg-redesigned);
+    }
+}
+
+.modalOld {
+    .content {
+        background: var(--bg-color);
+    }
 }
 
 .opened {
