--- a/src/shared/ui/deprecated/StarRaiting/StarRaiting.module.scss
+++ b/src/shared/ui/deprecated/StarRaiting/StarRaiting.module.scss
@@ -1,10 +1,18 @@
+.StarRaiting {
+    .hovered {
+        fill: var(--primary-color);
+    }
+}
+
+.StarRaitingRedesigned {
+    .hovered {
+        fill: var(--icon-redesigned);
+    }
+}
+
 .Icon {
     fill: none;
     cursor: pointer;
-}
-
-.hovered {
-    fill: var(--primary-color);
 }
 
 .normal {
