--- a/src/app/styles/index.scss
+++ b/src/app/styles/index.scss
@@ -28,15 +28,31 @@ body {
 }
 
 *::-webkit-scrollbar {
-    width: 8px;
+    width: 6px;
     height: 10px;
 }
 
 *::-webkit-scrollbar-track {
-    background: var(--card-bg);
+    background: var(--light-bg-redesigned);
 }
 
 *::-webkit-scrollbar-thumb {
+    background-color: var(--icon-redesigned);
+    border-radius: 20px;
+    border: 1px solid var(--accent-redesigned);
+}
+
+
+.app *::-webkit-scrollbar {
+    width: 8px;
+    height: 10px;
+}
+
+.app *::-webkit-scrollbar-track {
+    background: var(--card-bg);
+}
+
+.app *::-webkit-scrollbar-thumb {
     background-color: var(--inverted-primary-color);
     border-radius: 20px;
     border: 2px solid var(--primary-color);
